Fix: Changed Chome driver to 144 to match with what is there in streamlit cloud.

--- a/Architecture Full workflow.html
+++ b/Architecture Full workflow.html
@@ -86,6 +86,8 @@
                         <div class="flex items-center gap-2"><span class="w-1.5 h-1.5 bg-blue-500 rounded-full"></span> 10-Yr Financials</div>
                         <div class="flex items-center gap-2"><span class="w-1.5 h-1.5 bg-red-500 rounded-full"></span> Credit Reports</div>
                         <div class="flex items-center gap-2"><span class="w-1.5 h-1.5 bg-emerald-500 rounded-full"></span> Transcripts</div>
+                        <div class="flex items-center gap-2"><span class="w-1.5 h-1.5 bg-emerald-500 rounded-full"></span> Analyst PPT</div>
+                        <div class="flex items-center gap-2"><span class="w-1.5 h-1.5 bg-emerald-500 rounded-full"></span> Valuation metrics</div>
                     </div>
                 </div>
             </div>
@@ -134,10 +136,10 @@
                                 <div class="text-[9px] font-black uppercase">Qualitative Analyst</div>
                             </div>
                             <div class="w-full flex flex-col gap-1">
+                                <div class="mini-agent"><i data-lucide="gavel" class="w-3 h-3 text-emerald-600"></i> SEBI Violation Check</div>
                                 <div class="mini-agent"><i data-lucide="mic" class="w-3 h-3 text-emerald-600"></i> Latest Concall Analysis</div>
                                 <div class="mini-agent"><i data-lucide="git-compare" class="w-3 h-3 text-emerald-600"></i> QoQ Concall Analysis</div>
-                                <div class="mini-agent"><i data-lucide="users" class="w-3 h-3 text-emerald-600"></i> Scuttlebutt Analysis</div>
-                                <div class="mini-agent"><i data-lucide="gavel" class="w-3 h-3 text-emerald-600"></i> SEBI Violation Check</div>
+                                <div class="mini-agent"><i data-lucide="users" class="w-3 h-3 text-emerald-600"></i> Scuttlebutt Analysis</div>                                
                             </div>
                         </div>
 
@@ -149,11 +151,11 @@
                     </div>
 
                     <div class="flex justify-center gap-8">
-                        <div class="agent-node bg-slate-800 text-white border-none shadow-md w-52 py-3">
-                            <i data-lucide="binary" class="w-5 h-5 mb-1 text-indigo-400"></i>
+                        <div class="agent-node border-slate-300 bg-white w-52 py-3">
+                            <i data-lucide="binary" class="w-5 h-5 mb-1 text-indigo-600"></i>
                             <div class="text-[10px] font-black uppercase">Synthesis Agent</div>
                         </div>
-                        <div class="agent-node border-slate-300 bg-white w-52 border-dashed py-3">
+                        <div class="agent-node border-slate-300 bg-white w-52 py-3">
                             <i data-lucide="file-text" class="w-5 h-5 mb-1 text-slate-600"></i>
                             <div class="text-[10px] font-black uppercase">Report Generation</div>
                         </div>
